fix: оптимизация 2 фида https://api.magiacvetov12.ru/feed/yandex_business.yml